# ai-mutual-mentorship-scheme

./: README.md  docker-compose.yml  main.py  pyproject.toml
week1/: RAG_fundamentals.ipynb  prompt_engineering.ipynb  requirements.txt
week2/: rag_with_haystack.ipynb  requirements.txt
week3/: Dockerfile  app.py  haystack_continued.ipynb  prompt_template.jinja2  rag_pipeline.py  requirements.txt  retriever.py
week4/: README.md  docker-compose.yml
week4/rag_service/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
week4/rag_service/src/: main.py  pipelines.py
week4/streamlit_app/: .dockerignore  Dockerfile
week4/streamlit_app/src/: app.py
