[project]
name = "ai-mutual-mentorship-scheme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "haystack-ai>=2.21",
    "ollama-haystack>=5.3.0",
    "opensearch-haystack>=6.2.0",
    "pydantic>=2.12.5",
    "requests>=2.31.0",
    "trafilatura>=2.0.0",
    "uvicorn>=0.41.0",
]
